refactor: Migrate to Firebase for data storage
Replaces Supabase with Firebase as the backend for storing leads and mention logs. This change involves updating package dependencies, import paths, and the client initialization logic to use Firebase services. Environment variables have also been updated to reflect the new Firebase configuration.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.25.0",
-    "@supabase/supabase-js": "^2.76.1",
+    "firebase": "^10.12.4",
     "lucide-react": "^0.417.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
