--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "firebase-admin": "^12.2.0",
+    "firebase-functions": "^5.0.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
